582864 upgrade to spring 6 and osgi 7 and several unit tests to junit 4